2005-01-11  Jackson Harper  <jackson@ximian.com>

	* driver.cs: Make sure the actual assembly file exists when
	listing assemblies. Some packages don't remove the entire
	directory so we get existing directories without assemblies in
	them.

2004-12-08  Raja R Harinath  <rharinath@novell.com>

	* driver.cs (Symlink): Pass additional parameter: the name of the
	dll being installed.  If needed copy that file, not 'oldpath',
	since 'oldpath' need not be a valid file (esp. on DESTDIR builds).
	(Install): Update.

2004-07-28  Jackson Harper  <jackson@ximian.com>

	* driver.cs: Check for and install .mdb (debuger symbol files).
	
2004-07-15  Jackson Harper  <jackson@ximian.com>

	* driver.cs: MONO_GAC_PREFIX not MONO_GAC_PATH.
	
2004-06-15  Jackson Harper  <jackson@ximian.com>

	* driver.cs: Ensure that the -gacdir ends with /lib if it does not
	appened one. The reason for this is that the runtime expects it,
	and existing makefiles user -gacdir $(destdir)/$(libdir) so auto
	appending it without checking would break many things.
	
2004-06-10  Jackson Harper  <jackson@ximian.com>

	* driver.cs: We don't need to check if the canidate is a file in
	IsSwitch anymore as some other commandline handling will take care
	of this case.
	
2004-06-10  Jackson Harper  <jackson@ximian.com>

	* driver.cs: Don't append gacdir to /root. This breaks
	everything. Will add another option for doing this if its needed.
	
2004-06-09  Jackson Harper  <jackson@ximian.com>

	* gacutil.exe.sources: Make the new gacutil the default and return
	seats to their upright position.
	
2004-06-08  Jackson Harper  <jackson@ximian.com>

	* driver.cs: When checking refs don't bother using an AppDomain
	and load the assembly using the code base so we get the right
	one. Print out the name of the non strong named assembly if one is
	referenced.
	
2004-06-08  Jackson Harper  <jackson@ximian.com>

	* driver.cs Add install from list and uninstall from list