@@ -264,11 +264,14 @@ namespace Mono.Tools {
 					WriteLine ("ERROR: Could not create package dir file.");
 					Environment.Exit (1);
 				}
-				Symlink (name, Path.Combine (link_path, asmb_file), ref_path);
+ 				if (Path.DirectorySeparatorChar == '/') {
+ 					symlink ("../gac/" + an.Name + "/" + version_token + "/" + asmb_file, ref_path);
+ 				} else {
+ 					File.Copy (Path.Combine (link_path, asmb_file), ref_path);
+ 				}
 
 				WriteLine ("Package exported to: " + ref_path + " -> " +
 						Path.Combine (link_path, asmb_file));
-
 			}
 
 			WriteLine ("{0} installed into the gac ({1})", an.Name, gacdir);
@@ -558,17 +561,6 @@ namespace Mono.Tools {
 				break;
 			}
 			return c;	 
-		}
-
-		// name = name of dll being installed
-		// oldpath = path the symlink points to -- cannot be assumed to be a valid file
-		// newpath = name of symlink
-		private static void Symlink (string name, string oldpath, string newpath) {
-			if (Path.DirectorySeparatorChar == '/') {
-				symlink (oldpath, newpath);
-			} else {
-				File.Copy (name, newpath);
-			}
 		}
 
 		[DllImport ("libc", SetLastError=true)]
